--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "grunt-sails-linker": "~0.10.1",
     "grunt-sync": "0.2.4",
     "include-all": "~0.1.6",
+    "password-hash-and-salt": "^0.1.3",
     "pusher": "^1.2.1",
     "quiche": "0.0.10",
     "rc": "1.0.1",
