--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "grunt-sync": "0.2.4",
     "include-all": "~0.1.6",
     "jsonwebtoken": "^7.1.9",
+    "node-cache": "^4.0.0",
     "nodemailer": "^2.5.0",
     "password-hash-and-salt": "^0.1.3",
     "pusher": "^1.2.1",
@@ -41,6 +42,7 @@
     "sails-mysql": "^0.11.5",
     "sails-react-store": "^1.0.9",
     "urban-airship-push": "^0.1.0",
+    "uuid": "^2.0.3",
     "waterline": "^0.11.0"
   },
   "scripts": {
