--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "include-all": "~0.1.6",
     "jsonwebtoken": "^7.1.9",
     "node-cache": "^4.0.0",
+    "node-pushnotifications": "^0.1.8",
     "nodemailer": "^2.5.0",
     "password-hash-and-salt": "^0.1.3",
     "pusher": "^1.2.1",
