--- a/.gitignore
+++ b/.gitignore
@@ -42,7 +42,7 @@
 config/local.js
 config/connections.js
 config/models.js
-config/env/certs/ios.cert
+config/env/certs/*.cer
 mongo
 
 ################################################
