--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "a Sails application",
   "keywords": [],
   "dependencies": {
+    "apn": "^2.1.1",
     "async": "^2.0.0-rc.1",
     "babel": "^6.5.2",
     "babel-preset-es2015": "^6.5.0",
@@ -29,7 +30,6 @@
     "include-all": "~0.1.6",
     "jsonwebtoken": "^7.1.9",
     "node-cache": "^4.0.0",
-    "node-pushnotifications": "^0.1.8",
     "nodemailer": "^2.5.0",
     "password-hash-and-salt": "^0.1.3",
     "pusher": "^1.2.1",
