--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "apn": "^2.1.1",
     "async": "^2.0.0-rc.1",
     "babel": "^6.5.2",
+    "babel-cli": "^6.16.0",
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
     "babelify": "^7.2",
@@ -49,7 +50,7 @@
   },
   "scripts": {
     "debug": "node debug app.js",
-    "start": "node app.js"
+    "start": "./node_modules/.bin/babel-node app.js"
   },
   "main": "app.js",
   "repository": {
