--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,7 @@ config/connections.js
 config/models.js
 config/env/certs/*.pem
 mongo
+.env
 
 ################################################
 # Dependencies
