--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "bluebird": "^3.3.3",
     "chart.js": "^1.0.2",
     "csv": "^0.4.6",
+    "db-migrate": "^0.10.0-beta.20",
+    "dotenv": "^4.0.0",
     "ejs": "2.3.4",
     "grunt": "0.4.5",
     "grunt-contrib-clean": "0.6.0",
